# claude-proxy

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/sessions/: 3494e97f-6714-416a-aa7d-5305879a21dc.json  9886c530-56b5-4374-a0a8-fe8c2a4a138a.json  db5511ea-d6de-4d1c-a618-39ecf9321bc9.json
.omc/state/: agent-replay-9886c530-56b5-4374-a0a8-fe8c2a4a138a.jsonl
design-system/claude-proxy/: MASTER.md
docs/: browser-tooling.md
electron/: main.ts  preload.ts  proxy-server.ts
scripts/browser-tools/: agent-browser.sh  chrome-mcp-browser.sh  doctor.sh  playwright-open.mjs
server/: config-store.js  index.js  proxy-server.js
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  openai.rs  proxy.rs  types.rs
src/components/: ActiveProviderSwitcher.tsx  DesktopWorkbench.tsx  DesktopWorkbenchHeader.tsx  EnvConfig.tsx  FloatBall.css  FloatBall.tsx  LogViewer.tsx  ModelMapping.tsx  ModelRoutes.tsx  ProviderConfig.tsx  ProviderListPicker.tsx  RouterConfig.tsx  Settings.tsx  StatusBar.tsx  TokenStatsPanel.tsx
src/hooks/: index.ts  useLogs.ts  useProxyStatus.ts
src/lib/: provider-options.ts
src/styles/: index.css  (+1 more)
(+10 files in other folders)
